assign1/tests/parsing/bad/double-arg.c
#include "FenneC.h"

int farg(int a b) {}

int main() {}